--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     testCompile 'org.assertj:assertj-core:3.10.0'
     testCompile 'org.mockito:mockito-junit-jupiter:2.17.0'
     testImplementation 'com.approvaltests:approvaltests:4.0.2'
+    testCompile 'org.mockito:mockito-core:3.3.0'
+
 }
