--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,12 @@ group 'cn.xpbootcamp'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
-apply plugin: 'idea'
 
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
-
 
 test {
     useJUnitPlatform()
@@ -28,17 +26,9 @@ test {
     }
 }
 
-def JUNIT5_API_VERSION = '5.3.0'
-def JUNIT5_PLATFORM_VERSION = '1.3.0'
-
-
 dependencies {
     compile 'com.google.guava:guava:28.2-jre'
-    testCompile "org.junit.jupiter:junit-jupiter-api:${JUNIT5_API_VERSION}"
-    testCompile "org.junit.jupiter:junit-jupiter-engine:${JUNIT5_API_VERSION}"
-    testCompile "org.junit.jupiter:junit-jupiter-params:${JUNIT5_API_VERSION}"
-    testCompile "org.junit.platform:junit-platform-launcher:${JUNIT5_PLATFORM_VERSION}"
-    testCompile 'org.assertj:assertj-core:3.10.0'
-    testCompile 'org.mockito:mockito-junit-jupiter:2.17.0'
-    testImplementation 'com.approvaltests:approvaltests:4.0.2'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.0"
+    testImplementation "org.junit.jupiter:junit-jupiter-engine:5.6.0"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:5.6.0"
 }
