--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.0"
     testImplementation "org.junit.jupiter:junit-jupiter-engine:5.6.0"
     testImplementation "org.junit.jupiter:junit-jupiter-params:5.6.0"
+    testCompile 'org.mockito:mockito-junit-jupiter:2.17.0'
 }
